cmake_minimum_required(VERSION 3.12)

# Add Project Attributes
project(  CLI11-Programm-esrn
          LANGUAGES CXX
          DESCRIPTION "Emres erstes Programm mit CLI11"
)

# Add CLI11 Library to Project
find_package(cli11 QUIET)
if(NOT cli11_FOUND)
    include(FetchContent)
    FetchContent_Declare(
        cli11
        GIT_REPOSITORY https://github.com/CLIUtils/CLI11
        GIT_TAG        main
    )
    FetchContent_MakeAvailable(cli11)
endif()

add_executable( ${PROJECT_NAME} "${CMAKE_CURRENT_SOURCE_DIR}/main.cpp" ) 
target_link_libraries( ${PROJECT_NAME} CLI11::CLI11 )
